--- a/.github/workflows/young_whale_finder.yml
+++ b/.github/workflows/young_whale_finder.yml
@@ -77,6 +77,7 @@ jobs:
             OUTJSON="out/out-${SYM}.json"
             ERRFILE="out/err-${SYM}.txt"
 
+            # stdout -> JSON, stderr -> log
             bash -lc "$CMD" 1>"$OUTJSON" 2>"$ERRFILE" || EXIT_CODE=$?
 
             # Sanitize
@@ -84,26 +85,6 @@ jobs:
             mv "out/tmp-${SYM}.json" "$OUTJSON"
             tr -d '\000' < "$ERRFILE" > "out/err-${SYM}.san.txt" || true
             mv "out/err-${SYM}.san.txt" "$ERRFILE"
-
-            # --- Isola l'oggetto JSON pulito da eventuali log su stdout ---
-            OUT="$OUTJSON" python - << 'PY' || true
-import os, json
-fn = os.environ["OUT"]
-data = open(fn, "r", encoding="utf-8", errors="ignore").read()
-start = data.find("{")
-end   = data.rfind("}")
-if start != -1 and end != -1 and end >= start:
-    blob = data[start:end+1]
-    try:
-        json.loads(blob)
-        open(fn, "w", encoding="utf-8").write(blob)
-        print(f"[DEBUG] JSON isolato e valido in {fn}")
-    except Exception as e:
-        print(f"[WARN] JSON non valido dopo isolamento in {fn}: {e}")
-else:
-    print(f"[WARN] Nessun blocco JSON trovato in {fn}")
-PY
-            # --------------------------------------------------------------
 
             # Debug: conteggio results + stats + prime righe stderr
             if command -v jq >/dev/null 2>&1; then
@@ -127,13 +108,11 @@ PY
           mkdir -p out/msgs
           python - << 'PY'
           import os, json, html, glob
-
           def fmt_money(v):
               try:
                   return f"${float(v):,.2f}".replace(",", " ")
               except Exception:
                   return str(v)
-
           files = sorted(glob.glob("out/out-*.json"))
           total_msgs = 0
           for f in files:
@@ -143,13 +122,11 @@ PY
               except Exception as e:
                   print(f"[DEBUG] skip {f}: {e}")
                   continue
-
               sym = j.get("symbol") or os.path.basename(f).split("-")[1].split(".")[0]
               results = j.get("results") or []
               if not results:
                   print(f"[DEBUG] {sym}: nessun results nel JSON {f}")
                   continue
-
               for r in results:
                   user = r.get("user_name") or "Utente"
                   addr = r.get("address","")
@@ -161,14 +138,12 @@ PY
                   lines.append(f"Address: <code>{html.escape(addr)}</code>")
                   lines.append(f"Balance USD: <b>{fmt_money(balu)}</b>")
                   txt = "\n".join(lines)
-
                   idx = total_msgs + 1
                   out_path = f"out/msgs/msg_{idx:03d}.html"
                   with open(out_path, "w", encoding="utf-8") as m:
                       m.write(txt)
                   print(f"[DEBUG] msg creato per {sym}: {addr} -> {out_path}")
                   total_msgs += 1
-
           with open("out/msgs/COUNT.txt","w",encoding="utf-8") as f:
               f.write(str(total_msgs))
           PY
@@ -182,7 +157,6 @@ PY
             echo "Nessun wallet trovato: non invio nulla su Telegram."
             exit 0
           fi
-
           API="https://api.telegram.org/bot${TG_BOT_TOKEN}/sendMessage"
           shopt -s nullglob
           FILES=(out/msgs/msg_*.html)
