--- a/.github/workflows/young_whale_finder.yml
+++ b/.github/workflows/young_whale_finder.yml
@@ -57,27 +57,31 @@ jobs:
           export LANG=C.UTF-8
 
           declare -A TOKENS
-          TOKENS["AIA"]="0x48a18A4782b65a0fBed4dcA608BB28038B7bE339"
-          TOKENS["BLESS"]="0x7C8217517ed4711fe2DECCdFefFE8d906b9Ae11F"
-          TOKENS["B2"]="0x783c3f003f172c6Ac5AC700218a357d2D66Ee2a2"
-          TOKENS["LA"]="0x389AD4bb96d0D6EE5B6eF0EFAF4b7db0bA2e02a0"
-          TOKENS["RIVER"]="0xdA7AD9dea9397cffdDAE2F8a052B82f1484252B3"
-          TOKENS["KGEN"]="0xF3d5b4c34Ed623478cc5141861776E6cf7AE3A1E"
-          TOKENS["SOON"]="0xb9E1Fd5A02D3A33b25a14d661414E6ED6954a721"
+          # 2  IRYS    Irys
           TOKENS["IRYS"]="0x91152B4Ef635403efBAe860edD0F8c321d7c035d"
+          # 3  AIO     OlaXBT
+          TOKENS["AIO"]="0x81a7DA4074b8e0eD51beA40f9dCbDF4d9d4832b4"
+          # 4  B2      BSquared Network
+          TOKENS["B2"]="0x783c3f003f172c6Ac5AC700218a357d2D66Ee2a2"
+          # 5  RIVER   River
+          TOKENS["RIVER"]="0xdA7AD9dea9397cffdDAE2F8a052B82f1484252B3"
+          #    BLESS
+          TOKENS["BLESS"]="0x7C8217517ed4711fe2DECCdFefFE8d906b9Ae11F"
+          # 6  STO     StakeStone
+          TOKENS["STO"]="0xdAf1695c41327b61B9b9965Ac6A5843A3198cf07"
 
           mkdir -p out
 
           EXIT_CODE=0
-          # ordine fisso (inclusa RIVER)
-          for SYM in AIA BLESS B2 LA RIVER KGEN SOON IRYS; do
+          # ordine fisso richiesto
+          for SYM in IRYS AIO B2 RIVER BLESS STO; do
             ADDR="${TOKENS[$SYM]}"
             echo "Running ${SYM} (${ADDR})"
             CMD="python young_whale_finder.py \
               --token ${ADDR} \
               --minutes 40 \
               --min-usd 100 \
-              --young-days 5"
+              --young-days 7"
             echo "CMD: $CMD"
 
             OUTJSON="out/out-${SYM}.json"
@@ -116,8 +120,8 @@ jobs:
           import os, json, html, glob, time
           from datetime import datetime, timezone
 
-          # SOGLIA: non inviare se balance_usd < 10000
-          THRESHOLD = 10000.0
+          # SOGLIA: non inviare se balance_usd < 5000
+          THRESHOLD = 5000.0
 
           def fmt_money(v):
               try:
