--- a/salvataggio/young_whale_finder.yml
+++ b/salvataggio/young_whale_finder.yml
@@ -36,9 +36,6 @@ jobs:
       # Soglia balance USD per results (script)
       YWF_NAME_MIN_BAL_USD: "1500"
 
-      # NUOVO: soglia TRANSFER (USD) per wallet old (non-vergini)
-      YWF_TRANSFER_MIN_USD: "5000"
-
       # NUOVO: DB persistente wallet (nome + età + seen/new)
       YWF_WALLET_DB: "wallet_db.json"
 
@@ -89,7 +86,6 @@ jobs:
               --token ${ADDR} \
               --minutes 50 \
               --min-usd 100 \
-              --transfer-min-usd ${YWF_TRANSFER_MIN_USD:-5000} \
               --young-days 7"
             echo "CMD: $CMD"
 
@@ -107,7 +103,7 @@ jobs:
               COUNT=$(jq -r '(.results|length) // 0' "$OUTJSON" 2>/dev/null || echo 0)
               echo "[DEBUG] ${SYM}: results=$COUNT"
               echo -n "[DEBUG] ${SYM}: stats="
-              jq -r '" kept=\(.stats.wallet_tenuti // 0) new=\(.stats.wallet_new_in_results // 0) buys_ge_min=\(.stats.buys_ge_min_usd // 0) transfers_ge_min=\(.stats.transfers_ge_min_usd // 0) wallets_seen=\(.stats.wallet_unici_ge_min_usd // 0)"' "$OUTJSON" 2>/dev/null || true
+              jq -r '" kept=\(.stats.wallet_tenuti // 0) new=\(.stats.wallet_new_in_results // 0) buys_ge_min=\(.stats.buys_ge_min_usd // 0) wallets_seen=\(.stats.wallet_unici_ge_min_usd // 0)"' "$OUTJSON" 2>/dev/null || true
             else
               echo "[WARN] jq non disponibile; salto debug JSON."
             fi
@@ -177,11 +173,7 @@ jobs:
                       print(f"[DEBUG] skip {sym}: {addr} balance_usd={balu} < {THRESHOLD}")
                       continue
 
-                  trigger = (r.get("trigger") or "").upper().strip()
-                  buys = r.get("sum_buys_usd_window")
-                  transfers = r.get("sum_transfers_usd_window")
-                  tmax = r.get("max_transfer_usd_window")
-                  tcnt = r.get("transfers_count_window")
+                  bought = r.get("sum_buys_usd_window")
 
                   first_ts = r.get("first_tx_ts")
                   age_line = ""
@@ -190,34 +182,22 @@ jobs:
                       iso_date = datetime.fromtimestamp(first_ts, tz=timezone.utc).strftime("%Y-%m-%d")
                       age_line = f"<i>Wallet creato il {iso_date} — {days} giorni</i>"
 
-                  debank_url = f"https://debank.com/profile/{addr}"
+                  zerion_url = f"https://debank.com/profile/{addr}"
                   addr_short = short_addr(addr)
 
                   new_badge = "🚨🆕 " if is_new else ""
                   header = f'{new_badge}🐋 <a href="{dex_url}"><u>{html.escape(sym)}</u></a> — <b>{html.escape(user)}</b>'
+                  line_buys = f"🪙 Acquisti nella finestra: <b>{fmt_money(bought)}</b>"
+                  line_bal = f"Balance USD: <b>{fmt_money(balu)}</b>"
+                  line_addr = f"Wallet: {html.escape(addr_short)}"
+                  line_zerion = f'<a href="{zerion_url}">🏛️ Apri Wallet</a>'
 
-                  lines = [header]
-
-                  # Event lines (BUY / TRANSFER)
-                  if "BUY" in trigger and buys is not None:
-                      lines.append(f"🟢 BUY nella finestra: <b>{fmt_money(buys)}</b>")
-                  if "TRANSFER" in trigger and transfers is not None:
-                      extra = []
-                      if tcnt is not None:
-                          extra.append(f"n={int(tcnt)}")
-                      if tmax is not None:
-                          extra.append(f"max={fmt_money(tmax)}")
-                      suffix = f" ({', '.join(extra)})" if extra else ""
-                      lines.append(f"🟣 TRANSFER in ingresso: <b>{fmt_money(transfers)}</b>{suffix}")
-
-                  # Always show balance + wallet
-                  lines.append(f"Balance USD: <b>{fmt_money(balu)}</b>")
-                  lines.append(f"Wallet: {html.escape(addr_short)}")
+                  pieces = [header, line_buys, line_bal, line_addr]
                   if age_line:
-                      lines.append(age_line)
-                  lines.append(f'<a href="{debank_url}">🏛️ Apri Wallet</a>')
+                      pieces.append(age_line)
+                  pieces.append(line_zerion)
 
-                  txt = "\n".join(lines)
+                  txt = "\n".join(pieces)
                   idx = total_msgs + 1
                   base = f"msg_{idx:03d}"
                   out_path = os.path.join("out", "msgs", base + ".html")
